--- a/ultramarathon-finder-backend/package.json
+++ b/ultramarathon-finder-backend/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
