--- a/ultramarathon-finder-backend/package.json
+++ b/ultramarathon-finder-backend/package.json
@@ -9,16 +9,16 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
+    "aws-sdk": "^2.1356.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^5.13.22",
-    "multer": "^1.4.5-lts.1",
+    "mongoose": "^7.3.1",
+    "multer": "^1.4.4",
     "multer-s3": "^2.10.0"
   },
   "devDependencies": {
