--- a/ultramarathon-finder-backend/package.json
+++ b/ultramarathon-finder-backend/package.json
@@ -22,6 +22,7 @@
     "multer-s3": "^2.10.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "nodemon": "^2.0.7"
   },
   "author": "Emmi Bishop",
