--- a/ultramarathon-finder-backend/package.json
+++ b/ultramarathon-finder-backend/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.3.1",
     "multer": "^1.4.4",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
