--- a/ultramarathon-finder-backend/package.json
+++ b/ultramarathon-finder-backend/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1356.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
