--- a/ultramarathon-finder-backend/package.json
+++ b/ultramarathon-finder-backend/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ultramarathon-finder-backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "20.x"
+  },
   "description": "Backend for Ultramarathon Finder application",
   "main": "index.js",
   "type": "module",
