--- a/ultramarathon-finder-backend/package.json
+++ b/ultramarathon-finder-backend/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^7.3.1",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "openai": "^4.103.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
