--- a/ultramarathon-finder-backend/package.json
+++ b/ultramarathon-finder-backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1356.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
